# rosu-snippets

./: Cargo.toml
.github/workflows/: check.yml
snippets/: Booth of Ez.snippets  Crescent weird.snippets  Promise Zig Zag.snippets  alter ego test.snippets  js-1.snippets  test.snippets  test2.snippets
src/: main.rs  utils.rs
src/snippets/: structs.rs
src/ui/: app_state.rs  central_panel.rs  mania.rs  mod.rs  right_panel.rs  save_dialog.rs  side_panel.rs  toast.rs
